--- a/Table.html
+++ b/Table.html
@@ -27,7 +27,7 @@
         <tr>    
             <td>1</td>
             <td>2</td>
-            <td>3</td>
+            <td>3</td> 
             <td>4</td>
             <td>5</td>
             <td>6</td>
@@ -66,6 +66,15 @@
         </tr>
 
     </table>
+
+    <video width="320." height="240" controls>
+        <source src="Bob.mp4" type="video/mp4">
+    </video>
+
     
+    <audio controls>
+        <source src="Funk Universo.mp3" type="audio/mp3">
+    </audio>
+    <iframe width="923" height="519" src="https://www.youtube.com/embed/8xQIDYU2lP4" title="Generative AI Explainer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
