--- a/Assignment.html
+++ b/Assignment.html
@@ -43,8 +43,8 @@
     <p>When I'm not coding, you can find me exploring new technologies or indulging in photography. Let's connect and create something amazing together!</p>
     <hr>
     <br>
-    <a href="https://www.linkedin.com/in/anurag-kumar-123456789/" target="_blank">LinkedIn Profile</a>
-    <a href="" target="_blank">GitHub Profile</a>
+    <img src="Linkedin Image.png"> <a href="https://www.linkedin.com/in/anurag-kumar-123456789/" target="_blank">LinkedIn Profile</a>
+    <img src="Github Image.png" width="30" height="30"> <a href="" target="_blank">GitHub Profile</a>
     <hr>
     <br>    
     <footer>
